add_mobile_compatible

--- a/template/hi.html
+++ b/template/hi.html
@@ -1,13 +1,14 @@
 <body>
-    <style>.parent{
-        padding-left: 500px;
-        display: grid;
-        
-        grid-template-columns: 50px 50px 50px 50px 50px 50px 50px;
-        
-        column-gap: 1px;
-        
-        }</style>
+    <style>
+    .parent {
+    display: grid;
+    grid-template-columns: 50px 50px 50px 50px 50px 50px 50px;
+    column-gap: 1px;
+    justify-content: center; 
+    align-items: center; 
+    height: 100vh; 
+}
+    </style>
     <div class="parent">
     
     <div>
@@ -49,7 +50,7 @@
 
     <div>
     
-        <img src="https://i.ibb.co/sK2fRnB/png-clipart-scikit-learn-python-scikit-logo-brand-learning-text-computer-thumbnail.png"width="60" height=auto title="Scikit learn">
+        <img src="https://i.ibb.co/sK2fRnB/png-clipart-scikit-learn-python-scikit-logo-brand-learning-text-computer-thumbnail.png"width="70" height=auto title="Scikit learn">
                 
         </div>
     
