--- a/template/hi.html
+++ b/template/hi.html
@@ -1,6 +1,7 @@
 <body>
     <style>
     .parent {
+    font-family: 'UTM Avo', sans-serif;
     display: grid;
     grid-template-columns: 50px 50px 50px 50px 50px 50px 50px;
     column-gap: 1px;
@@ -50,9 +51,9 @@
 
     <div>
     
-        <img src="https://i.ibb.co/sK2fRnB/png-clipart-scikit-learn-python-scikit-logo-brand-learning-text-computer-thumbnail.png"width="70" height=auto title="Scikit learn">
+    <img src="https://i.ibb.co/2y4vpYM/png-clipart-scikit-learn-python-scikit-logo-brand-learning-text-computer-thumbnail.png"width="70" height=auto title="Scikit learn">
                 
-        </div>
+    </div>
     
     </div>
     
