--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;400;500;600;700&display=swap');
 
 
-* {font-family: 'Readex Pro';}
+* {font-family: 'UTM Avo', sans-serif;}
 
 
 a {
