--- a/template/contact.html
+++ b/template/contact.html
@@ -101,9 +101,9 @@
             <h1>CONTACT ME</h1>
             <p>I'm here to assist you! Feel free to reach out to me through various social media platforms, and I'll make sure to respond within 24 hours. Whether you have questions about Machine Learning, Artificial Intelligence, Development, Data Analytics, or Engineering, I'm here to provide answers and support your needs.</p>
             <div>  
-                <a href="https://www.facebook.com/profile.php?id=100016522207049&locale=vi_VN" class="fa fa-facebook"></a>
-                <a href="mailto:hotu0403@gmail.com" class="fa fa-google"></a>
-                <a href="https://github.com/mrpoponep" class="fa fa-github"></a>
+                <a href="https://www.facebook.com/profile.php?id=100016522207049&locale=vi_VN" class="fa fa-facebook" target="_blank"></a>
+                <a href="mailto:hotu0403@gmail.com" class="fa fa-google" target="_blank"></a>
+                <a href="https://github.com/mrpoponep" class="fa fa-github"target="_blank"></a>
             </div>  
         </div>
 
