--- a/template/project.html
+++ b/template/project.html
@@ -49,7 +49,7 @@
 /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
   .column{
-    height: 600px;
+    height: 500px;
   }
   .row {
     flex-direction: column;
@@ -78,7 +78,7 @@
   
   <div class="column" style="background-color:#ccc;">
     <h2>AI_snake</h2>
-    <p>AI Snake is a project that utilizes reinforcement learning to train an artificial intelligence agent to play the game of Snake. This AI-based approach enables the agent to learn optimal strategies for navigating in the Snake game.</p>
+    <p>AI Snake is a project that utilizes reinforcement learning to train an agent to play the game of Snake. This AI-based approach enables the agent to learn optimal strategies for navigating in the Snake game.</p>
     <a href="#" class="button">Source code</a>
   </div>
 
