--- a/template/project.html
+++ b/template/project.html
@@ -67,19 +67,19 @@
   <div class="column" style="background-color:#aaa;">
     <h2>ASCII_generator</h2>
     <p>A tool that converts text or images into ASCII art using English characters, allowing users to create unique and visually appealing text-based designs or pictures.</p>
-    <a href="#" class="button">Source code</a>
+    <a href="https://github.com/mrpoponep/ASCII_generator" class="button" target="_blank">Source code</a>
   </div>
   
   <div class="column" style="background-color:#bbb;">
     <h2>Vietnamese_OCR</h2>
     <p>Vietnamese OCR (Optical Character Recognition) is a technology designed to recognize and convert handwritten text in Vietnamese language into machine-readable text</p>
-    <a href="#" class="button">Source code</a>
+    <a href="https://github.com/mrpoponep/Vietnamese_OCR" class="button" target="_blank">Source code</a>
   </div>
   
   <div class="column" style="background-color:#ccc;">
     <h2>AI_snake</h2>
     <p>AI Snake is a project that utilizes reinforcement learning to train an agent to play the game of Snake. This AI-based approach enables the agent to learn optimal strategies for navigating in the Snake game.</p>
-    <a href="#" class="button">Source code</a>
+    <a href="https://github.com/mrpoponep/Snake_AI" class="button" target="_blank">Source code</a>
   </div>
 
 </div>
